Link to user in events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -105,7 +105,7 @@
           <h4>Onbekend <span class="text-muted small"><%= @unknown.count %></span></h4>
           <div>
             <%- @unknown.each do |s| %>
-              <%= link_to gravatar_for s, class: "small-profile-picture" %>
+              <%= link_to gravatar_for(s), s, class: "small-profile-picture" %>
             <% end %>
           </div>
           <hr>
