--- a/app/views/external_signups/see_you_soon.html.erb
+++ b/app/views/external_signups/see_you_soon.html.erb
@@ -17,7 +17,7 @@
           <%= @event.description %>
         <% end %>
         <hr>
-        <%= link_to "see_you_soon.ics?invitation_code=#{@event.invitation_code}", class: "btn btn-default" do %>
+        <%= link_to "#{@event.title}.ics?invitation_code=#{@event.invitation_code}", class: "btn btn-default" do %>
           <i class="fas fa-calendar-plus"></i> Toevoegen aan je kalender
         <% end %>
       </div>
