--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,7 +1,11 @@
 <% if @random_beer %>
   <div class="media">
     <span class="media-left media-middle">
-      <img class="media-object gravatar" style="max-height: 75px;" src="<%= @random_beer.picture %>" alt="<%= @random_beer.name %>">
+      <% if @random_beer.picture.present? %>
+        <%= image_tag @random_beer.picture, class: "media-object gravatar img-rounded", style: "max-height: 75px;" %>
+      <% else %>
+        <%= image_tag 'beer_splash.jpg', class: "media-object gravatar img-rounded", style: "max-height: 75px;" %>
+      <% end %>
     </span>
     <div class="media-body media-middle">
       <h4 class="media-heading"><%= link_to @random_beer.name, @random_beer %></h4>
