--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,7 +3,7 @@
 <div class="form-group">
   <%= f.label "Je review", class: 'control-label col-sm-2' %>
   <div class="col-sm-10">
-    <%= f.text_area :description, placeholder: 'Wat vonden we ervan?', class: 'form-control' %>
+    <%= f.rich_text_area :actiontext_description, placeholder: 'Wat vonden we ervan?', class: 'form-control' %>
   </div>
 </div>
 
