Add link to Google Drive

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,6 +36,8 @@
                 <li><%= link_to trail_path do %><i class="fas fa-history fa-fw"></i> Log<% end %></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Extern</li>
+                <li><a target="_blank" href="https://drive.google.com/drive/folders/0B560gHNlIBG9a0Q5MFR0WWtGWDg">
+                  <i class="fab fa-google-drive"></i> Google Drive</a></li>
                 <li><a target="_blank" href="https://github.com/dispuuthamers/">
                   <i class="fab fa-github fa-fw"></i> GitHub</a></li>
                 <li><a target="_blank" href="https://moneybird.com/275570381306201797">
