Changed grammatical error

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,7 +8,7 @@
   <div class="col-md-12">
     <div id="uitlegbox" class="collapse">
       <div class="well well-sm">
-        <p>Voeg onderstaand url toe aan je Google- of Applecalendar als je mooie integratie wil. Als je nog geen API-key hebt aangemaakt doe dat dan
+        <p>Voeg onderstaande url toe aan je Google- of Applecalendar als je mooie integratie wil. Als je nog geen API-key hebt aangemaakt doe dat dan
           <%= link_to 'hier', edit_user_path(current_user) %>.</p>
         <ul>
           <% current_user.api_keys.each do |ak| %>
