--- a/app/views/recipe/show.html.erb
+++ b/app/views/recipe/show.html.erb
@@ -16,14 +16,14 @@
       <div class="panel-body">
         Uitvoeringen:
         <ul>
-          <% @recipe.brews.each do |brew| %>
+          <% @brews.each do |brew| %>
             <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %></li>
           <% end %>
         </ul>
 
         <hr>
 
-        <div class="btn-group">
+        <div class="btn-group btn-group-vertical">
           <%= link_to 'Recept bijwerken', edit_recipe_path(@recipe), class: 'btn btn-default' %>
           <%= link_to 'Recept verwijderen', @recepe,  method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten?' } %>
           <%= link_to 'Nieuwe uitvoering', new_brew_path(@recipe), class: 'btn btn-default' %>
