--- a/app/views/recipe/show.html.erb
+++ b/app/views/recipe/show.html.erb
@@ -25,7 +25,7 @@
 
         <div class="btn-group btn-group-vertical">
           <%= link_to 'Recept bijwerken', edit_recipe_path(@recipe), class: 'btn btn-default' %>
-          <%= link_to 'Recept verwijderen', @recepe,  method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten?' } %>
+          <%= link_to 'Recept verwijderen', @recepe,  method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten? Je verwijdert het recept en alle keren dat het gebrouwen is!' } %>
           <%= link_to 'Nieuwe uitvoering', new_brew_path(@recipe), class: 'btn btn-default' %>
         </div>
       </div>
