--- a/app/views/brews/show.html.erb
+++ b/app/views/brews/show.html.erb
@@ -10,14 +10,23 @@
     <% end %>
   </div>
   <div class="col-md-3">
-    Uitvoeringen:<br>
-    <% @recipe.brews.each do |brew| %>
-      <%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %><br>
-    <% end %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        Uitvoeringen:
+        <ul>
+          <% @recipe.brews.each do |brew| %>
+            <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %><br></li>
+          <% end %>
+        </ul>
+
+        <hr>
+
+        <div class="btn-group">
+          <%= link_to 'Aanpassen', edit_brew_path(@brew), class: 'btn btn-default' %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<br>
-<div class="btn-group">
-  <%= link_to 'Aanpassen', edit_brew_path(@brew), class: 'btn btn-primary' %>
-  <%= link_to 'Terug', recipe_path(@recipe), class: 'btn btn-default' %>
-</div>
+
+
