--- a/app/views/recipe/show.html.erb
+++ b/app/views/recipe/show.html.erb
@@ -14,18 +14,22 @@
   <div class="col-md-3">
     <div class="panel panel-default">
       <div class="panel-body">
-        Uitvoeringen:
-        <ul>
-          <% @brews.each do |brew| %>
-            <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %></li>
-          <% end %>
-        </ul>
+        <% if @brews.any? %>
+          Uitvoeringen:
+          <ul>
+            <% @brews.each do |brew| %>
+              <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %></li>
+            <% end %>
+          </ul>
+        <% else %>
+        Dit recept is nog niet uitgevoerd.
+        <% end %>
 
         <hr>
 
         <div class="btn-group btn-group-vertical">
           <%= link_to 'Recept bijwerken', edit_recipe_path(@recipe), class: 'btn btn-default' %>
-          <%= link_to 'Recept verwijderen', @recepe,  method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten? Je verwijdert het recept en alle keren dat het gebrouwen is!' } %>
+          <%= link_to 'Recept verwijderen', @recepe, method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten? Je verwijdert het recept en alle keren dat het gebrouwen is!' } %>
           <%= link_to 'Nieuwe uitvoering', new_brew_path(@recipe), class: 'btn btn-default' %>
         </div>
       </div>
