Added confetti to event view if no outside participants are allowed. A small blocking error (look for the console.logs()) however prevents an new event, which is saved, from being loaded and displayed.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -210,3 +210,10 @@ table.events thead tr th, table.tablesorter tfoot tr th {
   border: none;
   transition: none;
 }
+
+.confetti-canvas {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: -2;
+}
