--- a/app/views/recipe/show.html.erb
+++ b/app/views/recipe/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title do %>
   <%= @recipe.name %>
 <% end %>
+
 <div class="row">
   <div class="col-md-9">
     <% if @recipe.actiontext_description.blank? %>
@@ -9,16 +10,30 @@
       <%= @recipe.actiontext_description %>
     <% end %>
   </div>
+
   <div class="col-md-3">
-    Uitvoeringen:<br>
-    <% @recipe.brews.each do |brew| %>
-      <%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %><br>
-    <% end %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <% if @brews.any? %>
+          Uitvoeringen:
+          <ul>
+            <% @brews.each do |brew| %>
+              <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %></li>
+            <% end %>
+          </ul>
+        <% else %>
+          Dit recept is nog niet uitgevoerd.
+        <% end %>
+
+        <hr>
+
+        <div class="btn-group btn-group-vertical">
+          <%= link_to 'Recept bijwerken', edit_recipe_path(@recipe), class: 'btn btn-default' %>
+          <%= link_to 'Recept verwijderen', @recepe, method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten? Je verwijdert het recept en alle keren dat het gebrouwen is!' } %>
+          <%= link_to 'Nieuwe uitvoering', new_brew_path(@recipe), class: 'btn btn-default' %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<br>
-<div class="btn-group">
-  <%= link_to 'Vernieuwen', edit_recipe_path(@recipe), class: 'btn btn-primary' %>
-  <%= link_to 'Nieuwe uitvoering', new_brew_path(@recipe), class: 'btn btn-primary' %>
-  <%= link_to 'Terug', recipe_index_path, class: 'btn btn-default' %>
-</div>
+
