--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -41,6 +41,7 @@
                 controller: "flatpickr",
                 flatpickr_date_format: "d-m-Y H:i",
                 flatpickr_enable_time: true,
+                time_24hr: true,
                 flatpickr_min_date: Time.zone.now
               } %>
           </div>
@@ -56,6 +57,7 @@
                 controller: "flatpickr",
                 flatpickr_date_format: "d-m-Y H:i",
                 flatpickr_enable_time: true,
+                time_24hr: true,
                 flatpickr_min_date: Time.zone.now
               } %>
           </div>
@@ -71,6 +73,7 @@
                 controller: "flatpickr",
                 flatpickr_date_format: "d-m-Y H:i",
                 flatpickr_enable_time: true,
+                time_24hr: true,
                 flatpickr_min_date: Time.zone.now
               } %>
           </div>
