--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -1,7 +1,7 @@
 <% cats = [
-    ['Extern', 'e'],
-    ['Dispuut', 'd'],
-    ['Leden', 'l']
+  %w[Extern e],
+  %w[Dispuut d],
+  %w[Leden l]
 ]
 %>
 <%= form_for(@news) do |f| %>
