--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -10,15 +10,10 @@
     <i class="far fa-clock"></i> <%= time_ago_in_words(quote.created_at) %> geleden.
   </span>
   <div class="btn-group">
-    <%= link_to edit_quote_path(quote),
-                class: 'btn btn-default btn-sm' do %>
+    <%= link_to edit_quote_path(quote), class: 'btn btn-default btn-sm' do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
-    <%= link_to quote,
-                method: :delete,
-                data: { confirm: 'Weet je het zeker?' },
-                title: quote.text,
-                class: 'btn btn-default btn-sm' do %>
+    <%= link_to quote, method: :delete, data: { confirm: 'Weet je het zeker?' }, title: quote.text, class: 'btn btn-default btn-sm' do %>
       <i class="far fa-trash-alt"></i>
     <% end %>
   </div>
