--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -39,7 +39,7 @@
                            class: 'form-control form-input',
                            data: {
                              controller: "flatpickr",
-                             flatpickr_default_date: @event.date.strftime("%d-%m-%Y %H:%i"),
+                             flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
                              flatpickr_date_format: "d-m-Y H:i",
                              flatpickr_enable_time: true,
                              flatpickr_time_24hr: true
@@ -55,7 +55,7 @@
                            class: 'form-control form-input',
                            data: {
                              controller: "flatpickr",
-                             flatpickr_default_date: @event.end_time.strftime("%d-%m-%Y %H:%i"),
+                             flatpickr_default_date: @event.end_time&.strftime("%d-%m-%Y %H:%i"),
                              flatpickr_date_format: "d-m-Y H:i",
                              flatpickr_enable_time: true,
                              flatpickr_time_24hr: true
@@ -71,7 +71,7 @@
                            class: 'form-control form-input',
                            data: {
                              controller: "flatpickr",
-                             flatpickr_default_date: @event.deadline.strftime("%d-%m-%Y %H:%i"),
+                             flatpickr_default_date: @event.deadline&.strftime("%d-%m-%Y %H:%i"),
                              flatpickr_date_format: "d-m-Y H:i",
                              flatpickr_enable_time: true,
                              flatpickr_time_24hr: true
