--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,12 +22,11 @@
     </section>
 
     <% if @user.lid? %>
-      <% missed_drinks = missed_drinks_for(@user) %>
-      <% unless missed_drinks.empty? %>
+      <% unless @missed_drinks.empty? %>
         <section>
           <h4>Gemiste Zondagborrels</h4>
           <ul>
-            <% missed_drinks.each do |md| %>
+            <% @missed_drinks.each do |md| %>
               <li><%= link_to md.date.strftime("%d-%m-%Y"), md %><br></li>
             <% end %>
           </ul>
