Add discord to external links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,12 +33,14 @@
                 <li><%= link_to news_index_path do %><i class="far fa-newspaper fa-fw"></i> Nieuws<% end %></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Extern</li>
+                <li><a target="_blank" href="https://discord.gg/7tH7dWbQkH">
+                  <i class="fab fa-fw fa-discord"></i> Discord</a></li>
                 <li><a target="_blank" href="https://drive.google.com/drive/folders/0B560gHNlIBG9a0Q5MFR0WWtGWDg">
-                  <i class="fab fa-google-drive"></i> Google Drive</a></li>
+                  <i class="fab fa-fw fa-google-drive"></i> Google Drive</a></li>
                 <li><a target="_blank" href="https://github.com/dispuuthamers/">
-                  <i class="fab fa-github fa-fw"></i> GitHub</a></li>
+                  <i class="fab fa-fw fa-github"></i> GitHub</a></li>
                 <li><a target="_blank" href="https://moneybird.com/275570381306201797">
-                  <i class="fa fa-coins fa-fw"></i> Moneybird</a></li>
+                  <i class="fa fa-fw fa-coins"></i> Moneybird</a></li>
               </ul>
             </li>
             <% if current_user&.admin? %>
