--- a/app/views/meetings/notuleer.html.erb
+++ b/app/views/meetings/notuleer.html.erb
@@ -2,7 +2,7 @@
   Notuleren
 <% end %>
 
-<%= form_with model: @meeting, data: { remote: true, controller: "autosave", target: "autosave.form", action: "ajax:success->autosave#success ajax:error->autosave#error" } do |f| %>
+<%= form_with model: @meeting, data: {remote: true, controller: "autosave", target: "autosave.form", action: "ajax:success->autosave#success ajax:error->autosave#error"} do |f| %>
   <% if @meeting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this meeting from being saved:</h2>
@@ -17,11 +17,13 @@
 
   <div class="form-group">
     <%= f.label :notes %><br>
-    <%= f.rich_text_area :actiontext_notes, class: 'form-control', data: { action: 'keyup->autosave#save' } %>
+    <%= f.rich_text_area :actiontext_notes, class: 'form-control', data: {action: 'keyup->autosave#save'} %>
   </div>
   <div class="actions">
-    <%= f.submit "Opslaan", class: 'btn btn-primary' %>
-    <%= f.submit "Annuleren", class: 'btn btn-danger' %>
+    <div class="btn-group">
+      <%= f.submit "Opslaan", class: 'btn btn-primary' %>
+      <%= f.submit "Annuleren", class: 'btn btn-default' %>
+    </div>
     <span class="text-muted" data-target="autosave.status"></span>
   </div>
 <% end %>
