--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -12,13 +12,13 @@
   <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-body">
-        Datum: <%= @meeting.date.strftime('%d-%m-%Y') %>
-        <hr>
+        <p><b>Datum:</b> <%= @meeting.date.strftime('%d-%m-%Y') %></p>
 
         <% if @meeting.user_id %>
-          Genotuleerd door: <%= link_to @notulist.name, @notulist %>
-          <hr>
+          <p><b>Genotuleerd door:</b> <%= link_to @notulist.name, @notulist %></p>
         <% end %>
+
+        <hr>
 
         <h2>Agenda <%= @meeting.onderwerp %></h2>
         <%= markdown(@meeting.agenda).html_safe if @meeting.agenda %>
